# clip-pinecone-vectorizer

./: LICENSE  Makefile  README.md  conftest.py  hello.py  pyproject.toml  sample_query.py
data/: items.json
src/: main.py
src/image_register/: __init__.py
src/image_register/domain/: __init__.py  models.py
src/image_register/infrastructure/: __init__.py  image_vectorizer.py  pinecone_client.py
src/image_register/repository/: __init__.py  item_repository.py
src/image_register/service/: __init__.py  image_register.py
tests/: test_image_register.py
