[project]
name = "clip-pinecone-vectorizer"
version = "0.1.0"
description = "コイン画像とメタデータの登録システム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "pillow>=11.1.0",
    "pinecone>=5.4.2",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "torch<2.3.0",
    "torchvision<2.3.0",
    "transformers>=4.47.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-mock>=3.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]  # srcディレクトリ以下をパッケージとして認識
include = ["coin_register*"]  # coin_registerで始まるパッケージを含める

[tool.pytest.ini_options]
pythonpath = "src"  # テスト実行時にsrcディレクトリをPythonパスに追加

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
