[project]
name = "clip-pinecone-vectorizer"
version = "0.1.0"
description = "コイン画像とメタデータの登録システム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.14.1",
    "numpy<2",
    "onnxruntime>=1.20.1",
    "pillow>=11.1.0",
    "pinecone>=5.4.2",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "rembg>=2.0.61",
    "ruff>=0.8.6",
    "torch<2.3.0",
    "torchvision<2.3.0",
    "transformers>=4.47.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-mock>=3.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]  # srcディレクトリ以下をパッケージとして認識
include = ["image_register*"]  # image_registerで始まるパッケージを含める

[tool.pytest.ini_options]
pythonpath = "src"  # テスト実行時にsrcディレクトリをPythonパスに追加

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
